fix bottom margin of card being too close to heading in style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,7 @@ h1,h2{
 
 .card {
     border-radius: 12px;
+    margin-bottom: 2vh;
 }
 
 #aboutcard {
